test/invalid/comment_slashstar_unfinished.d
//T error: comment_slashstar_unfinished.d:4:0:
//T error: Comment must end with `*/`.

/* This is an unfinished comment
